packages/components/src/components/segmented-control/segmented-control.scss
@use "~@infineon/design-system-tokens/dist/tokens";
@use "../../global/font.scss";

.group {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: tokens.$ifxSpace150;
}

.group__label {
    font-size: tokens.$ifxFontSizeM;
    line-height: tokens.$ifxLineHeightM;
    font-weight: tokens.$ifxFontWeightRegular;
    font-family: tokens.$ifxFontFamilyBody;

    &:empty {
        display: none;
    }
}

.group__controls {
    display: flex;
    flex-wrap: wrap;
}

.group__controls ::slotted(*) {
    margin-left: -1px;
    margin-top: -1px;
}

.group__caption {
    display: flex;
    align-items: center;
    gap: tokens.$ifxSpace100;
    font-style: normal;
    font-weight: tokens.$ifxFontWeightRegular;
    font-size: tokens.$ifxFontSizeXs;
    line-height: tokens.$ifxLineHeightXs;
    color: tokens.$ifxColorBaseBlack;
    font-family: tokens.$ifxFontFamilyBody;
}

